--- a/PartitionedIFS.ipynb
+++ b/PartitionedIFS.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "def generate_all_contractions(image, scaleAmount, )"
+    "def generate_all_contractions(image, origSize, finalSize, )"
    ]
   }
  ],
