--- a/PartitionedIFS.ipynb
+++ b/PartitionedIFS.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,43 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import math\n",
-    "from scipy import ndimage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define affine transformations to be used to compress image\n",
-    "\n",
-    "def transform(image, reflect, angle, c = 1, b = 0):\n",
-    "    if not reflect:\n",
-    "        temp = rotate(image, angle)\n",
-    "    else:\n",
-    "        temp = rotate(reflect(image), angle)\n",
-    "    \n",
-    "    return c*temp + b\n",
-    "\n",
-    "def rotate(image, angle):\n",
-    "    ndimage.rotate(image, angle, reshape=False)\n",
-    "\n",
-    "def reflect(image):\n",
-    "    return image[::-1, :]\n",
-    "\n",
-    "def shrink_image(image, amount):\n",
-    "    size_x, size_y = image.shape // amount\n",
-    "    shrunk = np.zeros((size_x, size_y))\n",
-    "    for row in range(size_x):\n",
-    "        for col in range(size_y):\n",
-    "            shrunk[row, col] = np.mean(image[row*amount:(row+1)*amount, col*amount:(col+1)*amount])\n",
-    "\n",
-    "    return shrunk\n",
-    "\n"
+    "import AffineTransformation as af"
    ]
   },
   {
@@ -72,13 +36,22 @@
     }
    ],
    "source": [
-    "def generate_all_contractions(image, origSize, finalSize, )"
+    "#create domain blocks \n",
+    "#each domain block has 1 ifs\n",
+    "#apply each of the ifss to its domain block\n",
+    "\n",
+    "#assume have square domain blocks -> need two points to represent them\n",
+    "#have starting points in each domain block (say corner or smth)\n",
+    "#at each iteration, calculate next point from previous \n",
+    "#(2d arrays, x[0][0] initial point in 0th domain block, x[0][1] next point in 0th domain block)\n",
+    "\n",
+    "#use IFS defined before"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -92,9 +65,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.7.6"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
