Added some titles and references

--- a/IFS/IteratedFunctionSystem_Examples.ipynb
+++ b/IFS/IteratedFunctionSystem_Examples.ipynb
@@ -1,15 +1,23 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iterated Function Systems\n",
+    "\n",
+    "Based on implementation from https://qmplus.qmul.ac.uk/pluginfile.php/2665145/mod_resource/content/1/160355141_Habib_Wahab_MTH6138_IFS.pdf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import AffineTransformation as af\n",
-    "import IFS as ifs\n",
-    "\n",
-    "# https://qmplus.qmul.ac.uk/pluginfile.php/2665145/mod_resource/content/1/160355141_Habib_Wahab_MTH6138_IFS.pdf"
+    "import IFS as ifs"
    ]
   },
   {
