--- a/ImageCompression/ImageCompression.ipynb
+++ b/ImageCompression/ImageCompression.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Image Compression\n",
+    "\n",
+    "Only implemented for grayscale images\n",
+    "\n",
+    "Based on implementations from https://pvigier.github.io/2018/05/14/fractal-image-compression.html and https://github.com/vrishabcommuri/fractal-image-compression/tree/main"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
